Bug 1337033 - Remove code handling MIME input streams with bodies that contain headers. r=bkelly